2.22.2 2021-10-20
~~~~~~~~~~~~~~~~~

* Fixed backward compatibility issues in Python interface: fixed reading of
  strings and characters; RecordType.__getattr__() now raises AttributeError
  if attribute does not exist; fixed potential ingestion problems linked to
  empty arrays and/or unavailable record fields.

* Improved CMake build system.

2.22.1 2021-06-07
~~~~~~~~~~~~~~~~~

* Fixed memory issue in HDF4 backend when data would have a non-default
  scale_factor, add_offset, or _FillValue attribute.

* Fixed backward compatibility issues in the new Python interface
  (Record.__dict__ is now available again).

2.22 2021-04-22
~~~~~~~~~~~~~~~

WARNING: Make sure to remove existing coda python installations before
upgrading (e.g. remove /usr/local/lib/python<x.y>/site-packages/coda).

* Major refactoring of the CODA Python interface:
  - changed implementation from swig to cffi (allows use of coda with pypy)
  - improved performance for coda.fetch() (greatest speedup when using pypy)
  - added new Object Oriented interface
  This new Python interface of CODA is fully backward compatible.

* Greatly improved performance of codacheck on HDF5/netCDF4 products.

* Allow xml attributes to be interpreted as any ascii datatype via a
  codadef definition (instead of only allowing it to be text).

2.21.2 2020-10-27
~~~~~~~~~~~~~~~~~

* Fixed potential memory issues and improved overall code stability.

2.21.1 2020-03-31
~~~~~~~~~~~~~~~~~

* Fixed issue in name mangling of embedded expat/zlib libraries.

2.21 2019-04-17
~~~~~~~~~~~~~~~

* Default CODA definition path for CODA command line tools on Windows is
  now also ../share/coda/definitions instead of ../definitions.

* CMake build now also creates share/coda/definitions directory when
  installing CODA.

* Fixed problem in matlab mex extension determination on linux when using
  the configure script.

* Fixed wrong installation location of coda.jar on Windows.
